--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "alert": "^5.0.10",
     "body-parser": "^1.20.0",
-    "ejs": "^3.1.6"
+    "ejs": "^3.1.6",
+    "js-alert": "^1.0.4"
   }
 }
